[gd_scene load_steps=20 format=2]

[ext_resource path="res://Global_gui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://levels/Level1/map/background/forest/sea.png" type="Texture" id=2]
[ext_resource path="res://levels/Level1/map/background/forest/clouds.png" type="Texture" id=3]
[ext_resource path="res://levels/Level1/map/background/forest/far-grounds.png" type="Texture" id=4]
[ext_resource path="res://player/Individual Sprites1/adventurer-slide-00.png" type="Texture" id=5]
[ext_resource path="res://player/Individual Sprites1/adventurer-slide-01.png" type="Texture" id=6]
[ext_resource path="res://fonts/space_age_cyrillic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fonts/17412.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resourse/button x.tres" type="StyleBox" id=9]
[ext_resource path="res://fonts/Font1.tres" type="DynamicFont" id=10]
[ext_resource path="res://Global_gui/Options.tscn" type="PackedScene" id=11]
[ext_resource path="res://main/sounds/Pixel River.ogg" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0823529, 0.329412, 0.203922, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.803922, 0.0431373, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="DynamicFont" id=4]
size = 25
outline_color = Color( 0.705882, 0.105882, 0.105882, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 2
outline_color = Color( 0.815686, 0.819608, 0.113725, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=6]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 3
outline_color = Color( 0.466667, 0.0784314, 0.0784314, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="loading" type="Node2D" parent="."]
pause_mode = 2
visible = false
position = Vector2( -75.7621, 5.64951 )

[node name="Sprite" type="Sprite" parent="loading"]
modulate = Color( 1, 0.25098, 0.25098, 1 )
position = Vector2( 713.582, 359.767 )
scale = Vector2( 11.5864, 7.74071 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="loading"]
modulate = Color( 0.815686, 0.521569, 0.521569, 1 )
position = Vector2( 719.637, 513.141 )
scale = Vector2( 2.40976, 1.90363 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="loading"]
self_modulate = Color( 0.517647, 0.337255, 0.337255, 1 )
position = Vector2( 721.687, 596.188 )
scale = Vector2( 2.16249, 2.4673 )
texture = ExtResource( 4 )

[node name="Sprite4" type="AnimatedSprite" parent="loading"]
position = Vector2( 726.274, 556.167 )
rotation = -0.0174533
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="ProgressBar" type="ProgressBar" parent="loading"]
margin_left = 637.373
margin_top = 331.682
margin_right = 837.373
margin_bottom = 381.682
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
value = 100.0

[node name="Label" type="Label" parent="loading"]
margin_left = 608.351
margin_top = 276.886
margin_right = 858.351
margin_bottom = 322.886
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0705882, 0.572549, 0.0666667, 1 )
text = "Загрузка..."
align = 1
valign = 1
max_lines_visible = 12

[node name="Timer" type="Timer" parent="loading"]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="loading"]
anims/loading = SubResource( 6 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 137.387
margin_top = -4.56651
margin_right = 177.387
margin_bottom = 35.4335

[node name="name" type="Label" parent="Popup"]
margin_left = 397.451
margin_top = 231.927
margin_right = 632.451
margin_bottom = 331.927
custom_fonts/font = SubResource( 7 )
text = "Пауза
Рекламная"
align = 1
valign = 1

[node name="Continue" type="Button" parent="Popup"]
margin_left = 240.0
margin_top = 320.0
margin_right = 386.0
margin_bottom = 363.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Продолжить"

[node name="main_menu" type="Button" parent="Popup"]
margin_left = 437.462
margin_top = 371.25
margin_right = 583.462
margin_bottom = 414.25
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Главное меню"

[node name="Settings" type="Button" parent="Popup"]
margin_left = 630.0
margin_top = 320.0
margin_right = 776.0
margin_bottom = 363.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Настройки"

[node name="Save" type="Button" parent="Popup"]
visible = false
margin_left = 260.0
margin_top = 400.0
margin_right = 386.0
margin_bottom = 443.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Сохранить"

[node name="Load" type="Button" parent="Popup"]
visible = false
margin_left = 630.0
margin_top = 400.0
margin_right = 752.0
margin_bottom = 443.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Загрузить"

[node name="ExitGame" type="Button" parent="Popup"]
margin_left = 420.0
margin_top = 450.0
margin_right = 607.0
margin_bottom = 493.0
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Выход из игры"

[node name="Options" parent="." instance=ExtResource( 11 )]

[node name="music" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 12 )
volume_db = 8.0
[connection signal="timeout" from="loading/Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="loading/AnimationPlayer" to="." method="_on_loading_animation_finished"]
[connection signal="pressed" from="Popup/Continue" to="." method="_on_pause_Button_pressed"]
[connection signal="pressed" from="Popup/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Popup/Settings" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Popup/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Popup/Load" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Popup/ExitGame" to="." method="_on_exitgame_pause_menu_pressed"]
[connection signal="visibility_changed" from="music" to="." method="_on_music_visibility_changed"]
